--- a/requirements.txt
+++ b/requirements.txt
@@ -1,20 +1,29 @@
+alembic==1.13.1
 black==24.1.0
 blinker==1.7.0
 click==8.1.7
 flake8==7.0.0
 Flask==3.0.0
+Flask-Migrate==4.0.5
+Flask-SQLAlchemy==3.1.1
+Flask-WTF==1.2.1
+greenlet==3.0.3
 isort==5.13.2
 itsdangerous==2.1.2
 Jinja2==3.1.2
+Mako==1.3.0
 MarkupSafe==2.1.3
 mccabe==0.7.0
 mypy-extensions==1.0.0
 packaging==23.2
 pathspec==0.12.1
 platformdirs==4.1.0
+psycopg2==2.9.9
 pycodestyle==2.11.1
 pyflakes==3.2.0
 python-dotenv==1.0.1
+SQLAlchemy==2.0.25
 tomli==2.0.1
 typing_extensions==4.9.0
 Werkzeug==3.0.1
+WTForms==3.1.2
