--- a/requirements.txt
+++ b/requirements.txt
@@ -4,14 +4,18 @@ black==24.1.0
 blinker==1.7.0
 click==8.1.7
 decorator==5.1.1
+dnspython==2.5.0
+email-validator==2.1.0.post1
 exceptiongroup==1.2.0
 executing==2.0.1
 flake8==7.0.0
-Flask==3.0.0
+Flask==3.0.1
+Flask-Login==0.6.3
 Flask-Migrate==4.0.5
 Flask-SQLAlchemy==3.1.1
 Flask-WTF==1.2.1
 greenlet==3.0.3
+idna==3.6
 ipython==8.20.0
 isort==5.13.2
 itsdangerous==2.1.2
