--- a/requirements.txt
+++ b/requirements.txt
@@ -11,6 +11,7 @@ executing==2.0.1
 flake8==7.0.0
 Flask==3.0.1
 Flask-Login==0.6.3
+Flask-Mail==0.9.1
 Flask-Migrate==4.0.5
 Flask-SQLAlchemy==3.1.1
 Flask-WTF==1.2.1
@@ -38,6 +39,7 @@ pure-eval==0.2.2
 pycodestyle==2.11.1
 pyflakes==3.2.0
 Pygments==2.17.2
+PyJWT==2.8.0
 python-dotenv==1.0.1
 six==1.16.0
 SQLAlchemy==2.0.25
