--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,15 @@
 alembic==1.13.1
+amqp==5.2.0
 asttokens==2.4.1
+async-timeout==4.0.3
+billiard==4.2.0
 black==24.1.0
 blinker==1.7.0
+celery==5.3.6
 click==8.1.7
+click-didyoumean==0.3.0
+click-plugins==1.1.1
+click-repl==0.3.0
 decorator==5.1.1
 dnspython==2.5.0
 email-validator==2.1.0.post1
@@ -22,6 +29,7 @@ isort==5.13.2
 itsdangerous==2.1.2
 jedi==0.19.1
 Jinja2==3.1.2
+kombu==5.3.5
 Mako==1.3.0
 MarkupSafe==2.1.3
 matplotlib-inline==0.1.6
@@ -40,13 +48,17 @@ pycodestyle==2.11.1
 pyflakes==3.2.0
 Pygments==2.17.2
 PyJWT==2.8.0
+python-dateutil==2.8.2
 python-dotenv==1.0.1
+redis==5.0.1
 six==1.16.0
 SQLAlchemy==2.0.25
 stack-data==0.6.3
 tomli==2.0.1
 traitlets==5.14.1
 typing_extensions==4.9.0
+tzdata==2024.1
+vine==5.1.0
 wcwidth==0.2.13
 Werkzeug==3.0.1
 WTForms==3.1.2
